--- a/DeleviryGoo/cart.html
+++ b/DeleviryGoo/cart.html
@@ -49,11 +49,13 @@
               </thead>
               <tbody id="startTable"></tbody>
             </table>
+            <div class="total">
+              <h3>Total: <span id="total"></span></h3>
           </div>
+          <button class="btn" onclick="checkOut()">
+            <a href="order.html">Checkout</a>
+          </button>
         </div>
-        <button class="btn" onclick="checkOut()">
-          <a href="order.html">Checkout</a>
-        </button>
       </section>
     </section>
   </body>
