--- a/DeleviryGoo/contact.html
+++ b/DeleviryGoo/contact.html
@@ -43,7 +43,7 @@
            </div>
         </div>
            <div class="form-inner">
-              <form action="#" method="post" class="login" autocomplete="on">
+              <form action="/contact" method="post" class="login" autocomplete="on">
                  <div class="field">
                     <input type="text" name="name" placeholder="Name" required autofocus>
                  </div>
