--- a/DeleviryGoo/contact.html
+++ b/DeleviryGoo/contact.html
@@ -59,7 +59,7 @@
                  </div>
                  <div class="field btn">
                     <div class="btn-layer"></div>
-                    <input type="submit" style="color: black;" value="Send">
+                    <input type="submit" style="color: black;" value="Send" formnovalidate>
                  </div>
            </div>
         </div>
