Database Implementation & Functions Initializing

--- a/DeleviryGoo/thanks.html
+++ b/DeleviryGoo/thanks.html
@@ -45,23 +45,7 @@
         </div>
       </div>
       <div class="form-inner">
-        <form action="/contact" method="post" class="login" autocomplete="on">
-          <div class="field">
-            <input type="text" name="name" placeholder="Name" required autofocus>
-          </div>
-          <div class="field">
-            <input type="email" name="email" placeholder="Email Address" required>
-          </div>
-          <div class="field">
-            <input type="tel" name="phone" placeholder="Phone Number" required>
-          </div>
-          <div class="field">
-            <textarea name="message" placeholder="Message" required></textarea>
-          </div>
-          <div class="field btn">
-            <div class="btn-layer"></div>
-            <input type="submit" style="color: black;" value="Send" formnovalidate>
-          </div>
+        Your feedback has been sent. We will get back to you as soon as possible.
       </div>
     </div>
   </div>
