fixing the accessibility

--- a/DeleviryGoo/cart.html
+++ b/DeleviryGoo/cart.html
@@ -27,7 +27,7 @@
 
     <!-- Hamburger -->
     <div class="hamburger">
-      <img src="/img/grid-outline.svg" alt="" />
+      <img src="/img/grid-outline.svg" alt="grid-outline />
     </div>
   </header>
   <!--showing selected items-->
