--- a/DeleviryGoo/contact.html
+++ b/DeleviryGoo/contact.html
@@ -16,7 +16,7 @@
 
   <!-- Preloader -->
   <div class="preloader">
-    <img src="img/preloader.gif" alt="" />
+    <img src="img/preloader.gif" alt="Preloader" />
   </div>
 
 
@@ -32,7 +32,7 @@
 
     <!-- Hamburger -->
     <div class="hamburger">
-      <img src="img/grid-outline.svg" alt="" />
+      <img src="img/grid-outline.svg" alt="grid-outline" />
     </div>
   </header>
 
@@ -81,11 +81,11 @@
         <div class="link">
           <h4>Contact Information</h4>
           <div>
-            <img src="img/location-cross.svg" alt="" />
+            <img src="img/location-cross.svg" alt="location-cross" />
             <span>>2223, Jeddah, Al-Nuzha, Heraa St. Vic3027</span>
           </div>
           <div>
-            <img src="img/sms-tracking.svg" alt="" />
+            <img src="img/sms-tracking.svg" alt="sms-tracking" />
             <span>deliveGoo@gmail.com</span>
           </div>
         </div>
@@ -109,15 +109,15 @@
         <div class="link">
           <h4>Connect with Us</h4>
           <div>
-            <img src="img/instagram.svg" alt="" />
+            <img src="img/instagram.svg" alt="Instagram" />
             <span>Instagram</span>
           </div>
           <div>
-            <img src="img/twitter.svg" alt="" />
+            <img src="img/twitter.svg" alt="Twitter" />
             <span>Twitter</span>
           </div>
           <div>
-            <img src="img/facebook.svg" alt="" />
+            <img src="img/facebook.svg" alt="Facebook" />
             <span>Facebook</span>
           </div>
         </div>
@@ -130,7 +130,7 @@
 
   <!-- Go To Top -->
   <div class="scroll-top">
-    <img src="img/arrow-up-outline.svg" alt="" />
+    <img src="img/arrow-up-outline.svg" alt="arrow-up-outline" />
   </div>
 
   <!-- Scripts -->
