--- a/DeleviryGoo/home.html
+++ b/DeleviryGoo/home.html
@@ -49,7 +49,7 @@ Khalid Alansari 2040210-->
 
       <!--Hamburger-->
       <div class="hamburger">
-        <img src="img/grid-outline.svg" alt="" />
+        <img src="img/grid-outline.svg" alt="grid-outline" />
       </div>
     </header>
 
@@ -64,7 +64,7 @@ Khalid Alansari 2040210-->
         <a href="/order.html" class="home-btn">Shop store List</a>
       </div>
       <div class="image">
-        <img src="img/Delivery address.svg" alt="" />
+        <img src="img/Delivery address.svg" alt="Deleviry address" />
       </div>
     </section>
 
@@ -86,22 +86,22 @@ Khalid Alansari 2040210-->
             One of our policy is free delivery is the driver took more than 30
             minutes to deliver the food to your doorstep.
           </p>
-          <a href="#">View More <img src="img/btn-arrow.svg" alt="" /> </a>
+          <a href="#">View More <img src="img/btn-arrow.svg" alt="btn-arrow" /> </a>
         </div>
         <div class="box">
-          <img src="img/fast-food.svg" alt="" />
+          <img src="img/fast-food.svg" alt="fast-food" />
           <h4>Foods From Around The World</h4>
           <p>
             You experience the world from food. The most delicious food comes
             with unforgettable time of happiness
           </p>
-          <a href="order.html">View More <img src="img/btn-arrow.svg" alt="" /> </a>
+          <a href="order.html">View More <img src="img/btn-arrow.svg" alt="btn-arrow" /> </a>
         </div>
         <div class="box">
-          <img src="img/delivery-man.svg" alt="" />
+          <img src="img/delivery-man.svg" alt="delivery-man" />
           <h4>Join Our Team</h4>
           <p>apply to be a driver and earn money by delivering food to our</p>
-          <a href="contact.html">View More <img src="img/btn-arrow.svg" alt="" /> </a>
+          <a href="contact.html">View More <img src="img/btn-arrow.svg" alt="btn-arrow" /> </a>
         </div>
       </div>
     </section>
@@ -109,7 +109,7 @@ Khalid Alansari 2040210-->
     <!--App-->
     <section class="app" id="contact">
       <div class="image">
-        <img src="img/splash with mobile.svg" alt="" />
+        <img src="img/splash with mobile.svg" alt="splash with mobile" />
       </div>
       <div class="content">
         <h3>Try out Our App</h3>
@@ -118,8 +118,8 @@ Khalid Alansari 2040210-->
           download our app for both IOS and Android mobiles.
         </p>
         <div class="links">
-          <img src="img/app-store.png" alt="" />
-          <img src="img/google-play.png" alt="" />
+          <img src="img/app-store.png" alt="app-store" />
+          <img src="img/google-play.png" alt="google-play" />
         </div>
       </div>
     </section>
@@ -136,11 +136,11 @@ Khalid Alansari 2040210-->
           <div class="link">
             <h4>Contact Information</h4>
             <div>
-              <img src="img/location-cross.svg" alt="" />
+              <img src="img/location-cross.svg" alt="location-cross" />
               <span>2223, Jeddah, Al-Nuzha, Heraa St., Vic3027</span>
             </div>
             <div>
-              <img src="img/sms-tracking.svg" alt="" />
+              <img src="img/sms-tracking.svg" alt="sms-tracking" />
               <span>deliverGoo@gmail.com</span>
             </div>
           </div>
@@ -164,15 +164,15 @@ Khalid Alansari 2040210-->
           <div class="link">
             <h4>Connect with Us</h4>
             <div>
-              <img src="img/instagram.svg" alt="" />
+              <img src="img/instagram.svg" alt="Instagram" />
               <span>Instagram</span>
             </div>
             <div>
-              <img src="img/twitter.svg" alt="" />
+              <img src="img/twitter.svg" alt="Twitter" />
               <span>Twitter</span>
             </div>
             <div>
-              <img src="img/facebook.svg" alt="" />
+              <img src="img/facebook.svg" alt="Facebook" />
               <span>Facebook</span>
             </div>
           </div>
@@ -187,7 +187,7 @@ Khalid Alansari 2040210-->
 
     <!-- Go To Top -->
     <div class="scroll-top">
-      <img src="img/arrow-up-outline.svg" alt="" />
+      <img src="img/arrow-up-outline.svg" alt="arrow-up-outline" />
     </div>
 
     <!-- Scripts -->
