--- a/DeleviryGoo/order.html
+++ b/DeleviryGoo/order.html
@@ -14,7 +14,7 @@
     
     <!-- Preloader  -->
     <div class="preloader">
-      <img src="img/preloader.gif" alt="" />
+      <img src="img/preloader.gif" alt="Preloader" />
     </div>
    
 
@@ -28,12 +28,12 @@
         <a href="contact.html">Contact Us</a>
         <a href="order.html" class="btn">Make an Order</a>
         <a href="cart.html" class="btn">
-          <img style="height: 25px; width: 25px" src="img/cart.svg" />
+          <img style="height: 25px; width: 25px" src="img/cart.svg" alt="Cart" />
         </a>
       </nav>
       <!-- Hamburger -->
       <div class="hamburger">
-        <img src="img/grid-outline.svg" alt="" />
+        <img src="img/grid-outline.svg" alt="grid-outline" />
       </div>
     </header>
 
@@ -46,27 +46,27 @@
 
       <div class="bottom">
         <div class="box">
-          <img src="img/Mac/macdonalds.svg" alt="" />
+          <img src="img/Mac/macdonalds.svg" alt="McDonald" />
           <h4>McDonald's</h4>
           <p></p>
           <a href="menu/mcdonalds.html"
-            >View Menu <img src="img/btn-arrow.svg" alt="" />
+            >View Menu <img src="img/btn-arrow.svg" alt="btn-arrow" />
           </a>
         </div>
         <div class="box">
-          <img src="img/KFC/kfc.svg" alt="" />
+          <img src="img/KFC/kfc.svg" alt="KFC" />
           <h4>KFC</h4>
           <p></p>
           <a href="menu/kfc.html"
-            >View Menu <img src="img/btn-arrow.svg" alt="" />
+            >View Menu <img src="img/btn-arrow.svg" alt="btn-arrow" />
           </a>
         </div>
         <div class="box">
-          <img src="img/AlBaik/albaik.svg" alt="" />
+          <img src="img/AlBaik/albaik.svg" alt="AlBaik" />
           <h4>ALBAIK</h4>
           <p></p>
           <a href="menu/albaik.html"
-            >View Menu <img src="img/btn-arrow.svg" alt="" />
+            >View Menu <img src="img/btn-arrow.svg" alt="btn-arrow" />
           </a>
         </div>
       </div>
@@ -75,7 +75,7 @@
     <!-- App -->
     <section class="app" id="contact">
       <div class="image">
-        <img src="img/splash with mobile.svg" alt="" />
+        <img src="img/splash with mobile.svg" alt="splash with mobile" />
       </div>
       <div class="content">
         <h3>Place your order through our app</h3>
@@ -84,8 +84,8 @@
           download our app for both iOS and Android mobiles.
         </p>
         <div class="links">
-          <img src="img/app-store.png" alt="" />
-          <img src="img/google-play.png" alt="" />
+          <img src="img/app-store.png" alt="app-store" />
+          <img src="img/google-play.png" alt="google-play" />
         </div>
       </div>
     </section>
@@ -102,11 +102,11 @@
           <div class="link">
             <h4>Contact Information</h4>
             <div>
-              <img src="img/location-cross.svg" alt="" />
+              <img src="img/location-cross.svg" alt="location-cross" />
               <span>>2223, Jeddah, Al-Nuzha, Heraa St. Vic3027</span>
             </div>
             <div>
-              <img src="img/sms-tracking.svg" alt="" />
+              <img src="img/sms-tracking.svg" alt="sms-tracking" />
               <span>deliveGoo@gmail.com</span>
             </div>
           </div>
@@ -130,15 +130,15 @@
           <div class="link">
             <h4>Connect with Us</h4>
             <div>
-              <img src="img/instagram.svg" alt="" />
+              <img src="img/instagram.svg" alt="Instagram" />
               <span>Instagram</span>
             </div>
             <div>
-              <img src="img/twitter.svg" alt="" />
+              <img src="img/twitter.svg" alt="Twitter" />
               <span>Twitter</span>
             </div>
             <div>
-              <img src="img/facebook.svg" alt="" />
+              <img src="img/facebook.svg" alt="Facebook" />
               <span>Facebook</span>
             </div>
           </div>
@@ -153,7 +153,7 @@
 
     <!-- Go To Top -->
     <div class="scroll-top">
-      <img src="img/arrow-up-outline.svg" alt="" />
+      <img src="img/arrow-up-outline.svg" alt="arrow-up-outline" />
     </div>
 
     <!-- Scripts -->
